message(STATUS "CMakeLists.txt in src directory")
add_subdirectory("arrays-and-hashing")
add_subdirectory("two-pointers")
add_subdirectory("sliding-window")
add_subdirectory("stack")
add_subdirectory("binary-search")
add_subdirectory("linked-list")
add_subdirectory("trees")
add_subdirectory("heap-priority-queue")
add_subdirectory("backtracking")
add_subdirectory("tries")
add_subdirectory("graphs")
add_subdirectory("advanced-graphs")
add_subdirectory("1-d-dynamic-programming")
add_subdirectory("2-d-dynamic-programming")
add_subdirectory("greedy")
add_subdirectory("intervals")
add_subdirectory("math-and-geometry")
add_subdirectory("bit-manipulation")
